Now you can download resulting file

--- a/static/css/result.css
+++ b/static/css/result.css
@@ -196,6 +196,10 @@ body {
     100% { opacity: 0; display: none; }
 }
 
+.card-body {
+    max-width: 200px;
+}
+
 /* Стили для подсветки синтаксиса (базовая) */
 .keyword { color: #0077cc; font-weight: bold; }
 .string { color: #dd1144; }
