--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,18 @@
                     <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
                     <path d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"/>
                 </svg>
-                FileUpload
+                Scheme Vision
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#features">Возможности</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#upload">Загрузка</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Контакты</a></li>
-                </ul>
-            </div>
+<!--            <div class="collapse navbar-collapse" id="navbarNav">-->
+<!--                <ul class="navbar-nav ms-auto">-->
+<!--                    <li class="nav-item"><a class="nav-link" href="#features">Возможности</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="#upload">Загрузка</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="#contact">Контакты</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
         </div>
     </nav>
 
@@ -36,8 +36,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="display-4 fw-bold mb-4">Безопасная загрузка файлов на сервер</h1>
-                    <p class="lead mb-4">Загружайте, храните и делитесь файлами любого размера. Быстро, безопасно и без ограничений.</p>
+                    <h1 class="display-4 fw-bold mb-4">Онлайн распознавание блок-схем</h1>
+                    <p class="lead mb-4">Загружайте изображения и преобразовывайте их в текстовые алгоритмы</p>
                     <a href="#upload" class="btn btn-primary btn-lg">Начать загрузку</a>
                 </div>
                 <div class="col-lg-6">
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <h2 class="text-center mb-5">Загрузите ваш файл</h2>
+                    <h2 class="text-center mb-5">Загрузите блок-схему</h2>
 
                     <!-- Сообщения об ошибках/успехе -->
                     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -98,75 +98,76 @@
         </div>
     </section>
 
-    <!-- Возможности -->
-    <section id="features" class="features-section">
-        <div class="container">
-            <h2 class="text-center mb-5">Наши возможности</h2>
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="feature-card bg-white shadow-sm">
-                        <div class="feature-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-shield-check" viewBox="0 0 16 16">
-                                <path d="M5.338 1.59a61.44 61.44 0 0 0-2.837.856.481.481 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.725 10.725 0 0 0 2.287 2.233c.346.244.652.42.893.533.12.057.218.095.293.118a.55.55 0 0 0 .101.025.615.615 0 0 0 .1-.025c.076-.023.174-.061.294-.118.24-.113.547-.29.893-.533a10.726 10.726 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56z"/>
-                                <path d="M10.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-                            </svg>
-                        </div>
-                        <h4>Безопасность</h4>
-                        <p>Все файлы защищены шифрованием и доступны только авторизованным пользователям.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="feature-card bg-white shadow-sm">
-                        <div class="feature-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-lightning-charge" viewBox="0 0 16 16">
-                                <path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09zM4.157 8.5H7a.5.5 0 0 1 .478.647L6.11 13.59l5.732-6.09H9a.5.5 0 0 1-.478-.647L9.89 2.41 4.157 8.5z"/>
-                            </svg>
-                        </div>
-                        <h4>Высокая скорость</h4>
-                        <p>Быстрая загрузка и скачивание файлов благодаря оптимизированной инфраструктуре.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="feature-card bg-white shadow-sm">
-                        <div class="feature-icon">
-                            <svg xmlns="http://www.w3.org2000/svg" width="40" height="40" fill="currentColor" class="bi bi-infinity" viewBox="0 0 16 16">
-                                <path d="M5.68 5.792 7.345 7.75 5.681 9.708a2.75 2.75 0 1 1 0-3.916ZM8 6.978 6.416 5.113l-.014-.015a3.75 3.75 0 1 0 0 5.304l.014-.015L8 8.522l1.584 1.865.014.015a3.75 3.75 0 1 0 0-5.304l-.014.015L8 6.978Zm.656.772 1.663-1.958a2.75 2.75 0 1 1 0 3.916L8.656 7.75Z"/>
-                            </svg>
-                        </div>
-                        <h4>Без ограничений</h4>
-                        <p>Загружайте файлы любого типа и размера. Мы не накладываем искусственные ограничения.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    &lt;!&ndash; Возможности &ndash;&gt;-->
+<!--    <section id="features" class="features-section">-->
+<!--        <div class="container">-->
+<!--            <h2 class="text-center mb-5">Наши возможности</h2>-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-4 mb-4">-->
+<!--                    <div class="feature-card bg-white shadow-sm">-->
+<!--                        <div class="feature-icon">-->
+<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-shield-check" viewBox="0 0 16 16">-->
+<!--                                <path d="M5.338 1.59a61.44 61.44 0 0 0-2.837.856.481.481 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.725 10.725 0 0 0 2.287 2.233c.346.244.652.42.893.533.12.057.218.095.293.118a.55.55 0 0 0 .101.025.615.615 0 0 0 .1-.025c.076-.023.174-.061.294-.118.24-.113.547-.29.893-.533a10.726 10.726 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56z"/>-->
+<!--                                <path d="M10.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>-->
+<!--                            </svg>-->
+<!--                        </div>-->
+<!--                        <h4>Безопасность</h4>-->
+<!--                        <p>Все файлы защищены шифрованием и доступны только авторизованным пользователям.</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-4 mb-4">-->
+<!--                    <div class="feature-card bg-white shadow-sm">-->
+<!--                        <div class="feature-icon">-->
+<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-lightning-charge" viewBox="0 0 16 16">-->
+<!--                                <path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09zM4.157 8.5H7a.5.5 0 0 1 .478.647L6.11 13.59l5.732-6.09H9a.5.5 0 0 1-.478-.647L9.89 2.41 4.157 8.5z"/>-->
+<!--                            </svg>-->
+<!--                        </div>-->
+<!--                        <h4>Высокая скорость</h4>-->
+<!--                        <p>Быстрая загрузка и скачивание файлов благодаря оптимизированной инфраструктуре.</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-4 mb-4">-->
+<!--                    <div class="feature-card bg-white shadow-sm">-->
+<!--                        <div class="feature-icon">-->
+<!--                            <svg xmlns="http://www.w3.org2000/svg" width="40" height="40" fill="currentColor" class="bi bi-infinity" viewBox="0 0 16 16">-->
+<!--                                <path d="M5.68 5.792 7.345 7.75 5.681 9.708a2.75 2.75 0 1 1 0-3.916ZM8 6.978 6.416 5.113l-.014-.015a3.75 3.75 0 1 0 0 5.304l.014-.015L8 8.522l1.584 1.865.014.015a3.75 3.75 0 1 0 0-5.304l-.014.015L8 6.978Zm.656.772 1.663-1.958a2.75 2.75 0 1 1 0 3.916L8.656 7.75Z"/>-->
+<!--                            </svg>-->
+<!--                        </div>-->
+<!--                        <h4>Без ограничений</h4>-->
+<!--                        <p>Загружайте файлы любого типа и размера. Мы не накладываем искусственные ограничения.</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
     <!-- Футер -->
     <footer id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h5>FileUpload</h5>
-                    <p>Надежный сервис для загрузки и хранения ваших файлов.</p>
+                <div class="col-md-4">
+                    <h5>Scheme Vision</h5>
+                    <p>Сервис для распознавания блок-схем.</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <h5>Контакты</h5>
                     <ul class="list-unstyled">
-                        <li>Email: info@fileupload.com</li>
-                        <li>Телефон: +7 (999) 123-45-67</li>
+                        <li>Email: ivanstrikeraddress@gmail.com</li>
+                        <li>Телефон №1: +7 (904) 618-93-84</li>
+                        <li>Телефон №2: +7 (967) 978-62-78</li>
                     </ul>
                 </div>
-                <div class="col-md-3">
-                    <h5>Правовая информация</h5>
+                <div class="col-md-4">
+                    <h5>Команда "Новый Нейротех"</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">Политика конфиденциальности</a></li>
-                        <li><a href="#" class="text-light">Условия использования</a></li>
+                        <li>Семёнов Владислав</li>
+                        <li>Виноградов Иван</li>
                     </ul>
                 </div>
             </div>
             <hr class="my-4" style="border-color: rgba(255,255,255,0.1);">
             <div class="text-center">
-                <p class="mb-0">&copy; 2023 FileUpload. Все права защищены.</p>
+                <p class="mb-0">&copy; 2026 Scheme Vision. </p>
             </div>
         </div>
     </footer>
