--- a/templates/result.html
+++ b/templates/result.html
@@ -10,20 +10,23 @@
     <link href="{{ url_for('static', filename='css/result.css') }}" rel="stylesheet">
 </head>
 <body>
+    <!-- Навигация -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="/#" style="color: var(--primary-color);">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-cloud-upload me-2" viewBox="0 0 16 16">
+                    <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
+                    <path d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"/>
+                </svg>
+                Scheme Vision
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="/#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
         <!-- Основной контейнер редактора -->
         <div class="editor-container">
-            <!-- Заголовок -->
-            <div class="editor-header">
-                <div class="row align-items-center">
-                    <div class="col-md-8">
-                        <h2 class="mb-0">
-                            <i class="bi bi-file-earmark-text me-2"></i>
-                            {{ file.filename }}
-                        </h2>
-                    </div>
-                </div>
-            </div>
-
             <!-- Контент вкладок -->
             <div class="tab-content mx-3 mb-3" id="editorTabContent">
                 <!-- Вкладка редактирования -->
@@ -58,24 +61,24 @@
 
             </div>
 
-            <!-- Статистика -->
-            <div class="stats-bar">
-                <div class="row">
-                    <div class="col-md-4">
-                        <i class="bi bi-fonts me-1"></i>
-                        Символов: <span class="char-count" id="charCount">0</span>
-                    </div>
-                    <div class="col-md-4">
-                        <i class="bi bi-text-paragraph me-1"></i>
-                        Слов: <span class="word-count" id="wordCount">0</span>
-                    </div>
-                    <div class="col-md-4">
-                        <i class="bi bi-text-left me-1"></i>
-                        Строк: <span class="line-count" id="lineCount">0</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--            &lt;!&ndash; Статистика &ndash;&gt;-->
+<!--            <div class="stats-bar">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-4">-->
+<!--                        <i class="bi bi-fonts me-1"></i>-->
+<!--                        Символов: <span class="char-count" id="charCount">0</span>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4">-->
+<!--                        <i class="bi bi-text-paragraph me-1"></i>-->
+<!--                        Слов: <span class="word-count" id="wordCount">0</span>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4">-->
+<!--                        <i class="bi bi-text-left me-1"></i>-->
+<!--                        Строк: <span class="line-count" id="lineCount">0</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
     <!-- Модальное окно для поиска/замены -->
     <div class="modal fade" id="findReplaceModal" tabindex="-1">
