--- a/static/css/result.css
+++ b/static/css/result.css
@@ -13,6 +13,11 @@ body {
     padding-bottom: 50px;
 }
 
+#editor {
+    min-height: 500px;
+    font-size: 20px;
+}
+
 .editor-container {
     background: white;
     border-radius: 15px;
